--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -2,7 +2,7 @@ compile.on.save=true
 do.depend=false
 do.jar=true
 do.jlink=false
-file.reference.mysql-connector-j-9.2.0.jar=C:\\Users\\Maryi Lazo\\Downloads\\Ferreteria_MVC\\Ferreteria_MVC\\Conector\\Conector\\mysql-connector-j-9.2.0.jar
+file.reference.mysql-connector-j-9.2.0.jar=C:\\Users\\Maryi Lazo\\Documents\\FerreteriaMVC2025\\Conector\\Conector\\mysql-connector-j-9.2.0.jar
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
