--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,11 +35,13 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Ferreteria_MVC
 endorsed.classpath=
 excludes=
+file.reference.jcalendar-1.4.jar=SelectorCalendario/jcalendar-1.4.jar
 file.reference.mysql-connector-j-9.2.0.jar=C:\\Users\\Estudiantes\\Music\\Conector (1)\\Conector\\mysql-connector-j-9.2.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-j-9.2.0.jar}
+    ${file.reference.mysql-connector-j-9.2.0.jar}:\
+    ${file.reference.jcalendar-1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
